--- a/CarouselImagesApp/appsettings.json
+++ b/CarouselImagesApp/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CarouselImagesAppBBDD;Trusted_Connection=True;"
+    "DefaultConnection": "Data Source=LAPTOP-MO1HC59V;Initial Catalog=DbCrudImagenes;Integrated Security=true"
   }
 }
